--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <div id="percent-of-women-professors"></div>
     <div id="percent-of-men-professors"></div>
 
+    <div id="service-salary"></div>
+
 </body>
 
 </html>
